@@ -1,6 +1,6 @@
 #define RUBY_VERSION "2.0.0"
 #define RUBY_RELEASE_DATE "2015-02-25"
-#define RUBY_PATCHLEVEL 636
+#define RUBY_PATCHLEVEL 637
 
 #define RUBY_RELEASE_YEAR 2015
 #define RUBY_RELEASE_MONTH 2
